--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
                 </button><br>
                 <h4 class="mt-3">Result / Y value :</h4>
                 <h5><span class="badge badge-secondary bg-dark" id="output"></span></h5>
+                <button class="btn btn-warning text-dark fw-bold" id="downloadModelButton" disabled
+                    onclick="downloadModel()">
+                    Download model
+                </button>
             </div>
+
+
         </div>
     </div>
 
